@@ -1,29 +1,29 @@
 package cc.geektip.geekoj.questionservice.service.impl;
 
+import cc.geektip.geekoj.api.model.dto.judge.JudgeConfig;
 import cc.geektip.geekoj.api.model.dto.question.QuestionQueryRequest;
-import cc.geektip.geekoj.api.model.entity.problem.Question;
-import cc.geektip.geekoj.api.model.entity.user.User;
-import cc.geektip.geekoj.api.model.vo.QuestionVO;
-import cc.geektip.geekoj.api.model.vo.UserVO;
-import cc.geektip.geekoj.api.service.QuestionService;
-import cc.geektip.geekoj.api.service.UserService;
-import cc.geektip.geekoj.common.common.ErrorCode;
+import cc.geektip.geekoj.api.model.entity.question.Question;
+import cc.geektip.geekoj.api.model.entity.question.QuestionSubmit;
+import cc.geektip.geekoj.api.model.enums.question.QuestionSubmitStatusEnum;
+import cc.geektip.geekoj.api.model.enums.question.UserQuestionStatusEnum;
+import cc.geektip.geekoj.api.model.vo.question.SafeQuestionVo;
+import cc.geektip.geekoj.api.service.question.QuestionService;
+import cc.geektip.geekoj.api.service.question.QuestionSubmitService;
 import cc.geektip.geekoj.common.constant.CommonConstant;
-import cc.geektip.geekoj.common.exception.BusinessException;
-import cc.geektip.geekoj.common.exception.ThrowUtils;
 import cc.geektip.geekoj.common.utils.SqlUtils;
 import cc.geektip.geekoj.questionservice.mapper.QuestionMapper;
+import cc.geektip.geekoj.questionservice.utils.SessionUtil;
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.json.JSONUtil;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import com.baomidou.mybatisplus.core.toolkit.CollectionUtils;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import org.apache.commons.lang3.ObjectUtils;
+import jakarta.annotation.Resource;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.dubbo.config.annotation.DubboReference;
 import org.apache.dubbo.config.annotation.DubboService;
+import org.springframework.beans.BeanUtils;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -31,54 +31,16 @@ import java.util.stream.Collectors;
  * 题目服务实现
  */
 @DubboService
-public class QuestionServiceImpl extends ServiceImpl<QuestionMapper, Question>
-        implements QuestionService {
+public class QuestionServiceImpl extends ServiceImpl<QuestionMapper, Question> implements QuestionService {
 
-    @DubboReference
-    private UserService userService;
+    @Resource
+    private SessionUtil sessionUtil;
 
-    /**
-     * 校验题目是否合法
-     *
-     * @param question
-     * @param add
-     */
-    @Override
-    public void validQuestion(Question question, boolean add) {
-        if (question == null) {
-            throw new BusinessException(ErrorCode.PARAMS_ERROR);
-        }
-        String title = question.getTitle();
-        String content = question.getContent();
-        String tags = question.getTags();
-        String answer = question.getAnswer();
-        String judgeCase = question.getJudgeCase();
-        String judgeConfig = question.getJudgeConfig();
-        // 创建时，参数不能为空
-        if (add) {
-            ThrowUtils.throwIf(StringUtils.isAnyBlank(title, content, tags), ErrorCode.PARAMS_ERROR);
-        }
-        // 有参数则校验
-        if (StringUtils.isNotBlank(title) && title.length() > 80) {
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "标题过长");
-        }
-        if (StringUtils.isNotBlank(content) && content.length() > 8192) {
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "内容过长");
-        }
-        if (StringUtils.isNotBlank(answer) && answer.length() > 8192) {
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "答案过长");
-        }
-        if (StringUtils.isNotBlank(judgeCase) && judgeCase.length() > 8192) {
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "判题用例过长");
-        }
-        if (StringUtils.isNotBlank(judgeConfig) && judgeConfig.length() > 8192) {
-            throw new BusinessException(ErrorCode.PARAMS_ERROR, "判题配置过长");
-        }
-    }
-
+    @Resource
+    private QuestionSubmitService questionSubmitService;
 
     /**
-     * 获取查询包装类（用户根据哪些字段查询，根据前端传来的请求对象，得到 mybatis 框架支持的查询 QueryWrapper 类）
+     * 获取查询包装类
      *
      * @param questionQueryRequest
      * @return
@@ -86,75 +48,125 @@ public class QuestionServiceImpl extends ServiceImpl<QuestionMapper, Question>
     @Override
     public QueryWrapper<Question> getQueryWrapper(QuestionQueryRequest questionQueryRequest) {
         QueryWrapper<Question> queryWrapper = new QueryWrapper<>();
-        if (questionQueryRequest == null) {
-            return queryWrapper;
-        }
-        Long id = questionQueryRequest.getId();
-        String title = questionQueryRequest.getTitle();
-        String content = questionQueryRequest.getContent();
-        List<String> tags = questionQueryRequest.getTags();
-        String answer = questionQueryRequest.getAnswer();
-        Long userId = questionQueryRequest.getUserId();
+
         String sortField = questionQueryRequest.getSortField();
         String sortOrder = questionQueryRequest.getSortOrder();
+        String keyword = questionQueryRequest.getKeyword();
+        String status = questionQueryRequest.getStatus();
+        String difficulty = questionQueryRequest.getDifficulty();
+        List<String> tags = questionQueryRequest.getTags();
+
+        var questionSubmitMapper = questionSubmitService.getBaseMapper();
+        // 忽略 content 和 answer
+        queryWrapper.select(Question.class, item -> !item.getColumn().equals("content") && !item.getColumn().equals("answer"));
+
+        UserQuestionStatusEnum statusEnum = UserQuestionStatusEnum.getEnumByText(status);
+        if (statusEnum != null && !statusEnum.equals(UserQuestionStatusEnum.ALL)) {
+            Long currentUid = sessionUtil.getCurrentUserId();
+            Set<Long> passedIds;
+            Set<Long> triedIds;
+
+            switch (statusEnum) {
+                case PASSED:
+                    passedIds = questionSubmitMapper.selectList(new LambdaQueryWrapper<QuestionSubmit>()
+                                    .select(QuestionSubmit::getQuestionId).eq(QuestionSubmit::getUserId, currentUid)
+                                    .eq(QuestionSubmit::getStatus, QuestionSubmitStatusEnum.SUCCEED.getValue()))
+                            .stream().map(QuestionSubmit::getQuestionId).collect(Collectors.toSet());
+                    if (passedIds.isEmpty()) {
+                        return null;
+                    }
+                    queryWrapper.in("id", passedIds);
+                    break;
+                case ATTEMPTED:
+                    passedIds = questionSubmitMapper.selectList(new LambdaQueryWrapper<QuestionSubmit>()
+                                    .select(QuestionSubmit::getQuestionId).eq(QuestionSubmit::getUserId, currentUid)
+                                    .eq(QuestionSubmit::getStatus, QuestionSubmitStatusEnum.SUCCEED.getValue()))
+                            .stream().map(QuestionSubmit::getQuestionId).collect(Collectors.toSet());
+                    triedIds = questionSubmitMapper.selectList(new LambdaQueryWrapper<QuestionSubmit>()
+                                    .select(QuestionSubmit::getQuestionId).eq(QuestionSubmit::getUserId, currentUid)
+                                    .ne(QuestionSubmit::getStatus, QuestionSubmitStatusEnum.SUCCEED.getValue()))
+                            .stream().map(QuestionSubmit::getQuestionId).collect(Collectors.toSet());
+                    triedIds = (Set<Long>) CollUtil.subtract(triedIds, passedIds);
+                    if (triedIds.isEmpty()) {
+                        return null;
+                    }
+                    queryWrapper.in("id", triedIds);
+                    break;
+                case NOT_STARTED:
+                    triedIds = questionSubmitMapper.selectList(new LambdaQueryWrapper<QuestionSubmit>()
+                                    .select(QuestionSubmit::getQuestionId).eq(QuestionSubmit::getUserId, currentUid))
+                            .stream().map(QuestionSubmit::getQuestionId).collect(Collectors.toSet());
+                    if (!triedIds.isEmpty()) {
+                        queryWrapper.notIn("id", triedIds);
+                    }
+                    break;
+            }
+        }
 
         // 拼接查询条件
-        queryWrapper.like(StringUtils.isNotBlank(title), "title", title);
-        queryWrapper.like(StringUtils.isNotBlank(content), "content", content);
-        queryWrapper.like(StringUtils.isNotBlank(answer), "answer", answer);
-        if (CollectionUtils.isNotEmpty(tags)) {
+        boolean likeQuery = StringUtils.isNotBlank(keyword);
+        queryWrapper.like(likeQuery, "title", keyword);
+        queryWrapper.like(likeQuery, "content", keyword);
+        queryWrapper.like(likeQuery, "answer", keyword);
+        if (CollUtil.isNotEmpty(tags)) {
             for (String tag : tags) {
                 queryWrapper.like("tags", "\"" + tag + "\"");
             }
         }
-        queryWrapper.eq(ObjectUtils.isNotEmpty(id), "id", id);
-        queryWrapper.eq(ObjectUtils.isNotEmpty(userId), "userId", userId);
-        queryWrapper.eq("isDelete", false);
-        queryWrapper.orderBy(SqlUtils.validSortField(sortField), sortOrder.equals(CommonConstant.SORT_ORDER_ASC),
-                sortField);
+        queryWrapper.eq(StringUtils.isNotBlank(difficulty), "difficulty", difficulty);
+
+        queryWrapper.orderBy(SqlUtils.validSortField(sortField), sortOrder.equals(CommonConstant.SORT_ORDER_ASC), sortField);
         return queryWrapper;
     }
 
 
     @Override
-    public QuestionVO getQuestionVO(Question question) {
-        QuestionVO questionVO = QuestionVO.objToVo(question);
-        // 1. 关联查询用户信息
-        Long userId = question.getUserId();
-        User user = null;
-        if (userId != null && userId > 0) {
-            user = userService.getById(userId);
+    public SafeQuestionVo objToVo(Question question, Long uid) {
+        if (question == null) {
+            return null;
         }
-        UserVO userVO = userService.getUserVO(user);
-        questionVO.setUserVO(userVO);
-        return questionVO;
+        SafeQuestionVo safeQuestionVO = new SafeQuestionVo();
+        BeanUtils.copyProperties(question, safeQuestionVO);
+        safeQuestionVO.setTags(JSONUtil.toList(question.getTags(), String.class));
+        safeQuestionVO.setJudgeConfig(JSONUtil.toBean(question.getJudgeConfig(), JudgeConfig.class));
+
+        var questionSubmitMapper = questionSubmitService.getBaseMapper();
+        //查询当前用户历史做题信息（已通过、尝试过、未开始）
+        QuestionSubmit submit = questionSubmitMapper.selectOne(new QueryWrapper<QuestionSubmit>()
+                .select("max(status) as status").lambda()
+                .eq(QuestionSubmit::getQuestionId, question.getId())
+                .eq(QuestionSubmit::getUserId, uid));
+
+        if (submit == null) {
+            safeQuestionVO.setStatus(UserQuestionStatusEnum.NOT_STARTED.getText());
+        } else if (submit.getStatus().equals(QuestionSubmitStatusEnum.SUCCEED.getValue())) {
+            safeQuestionVO.setStatus(UserQuestionStatusEnum.PASSED.getText());
+        } else if (submit.getStatus().equals(QuestionSubmitStatusEnum.FAILED.getValue())) {
+            safeQuestionVO.setStatus(UserQuestionStatusEnum.ATTEMPTED.getText());
+        } else {
+            safeQuestionVO.setStatus(UserQuestionStatusEnum.NOT_STARTED.getText());
+        }
+
+        return safeQuestionVO;
     }
 
     @Override
-    public Page<QuestionVO> getQuestionVOPage(Page<Question> questionPage) {
-        List<Question> questionList = questionPage.getRecords();
-        Page<QuestionVO> questionVOPage = new Page<>(questionPage.getCurrent(), questionPage.getSize(), questionPage.getTotal());
-        if (CollectionUtils.isEmpty(questionList)) {
-            return questionVOPage;
-        }
-        // 1. 关联查询用户信息
-        Set<Long> userIdSet = questionList.stream().map(Question::getUserId).collect(Collectors.toSet());
-        Map<Long, List<User>> userIdUserListMap = userService.listByIds(userIdSet).stream()
-                .collect(Collectors.groupingBy(User::getId));
-        // 填充信息
-        List<QuestionVO> questionVOList = questionList.stream().map(question -> {
-            QuestionVO questionVO = QuestionVO.objToVo(question);
-            Long userId = question.getUserId();
-            User user = null;
-            if (userIdUserListMap.containsKey(userId)) {
-                user = userIdUserListMap.get(userId).get(0);
-            }
-            questionVO.setUserVO(userService.getUserVO(user));
-            return questionVO;
-        }).collect(Collectors.toList());
-        questionVOPage.setRecords(questionVOList);
-        return questionVOPage;
+    public List<String> getQuestionTags() {
+        return lambdaQuery().select(Question::getTags)
+                .list()
+                .stream()
+                .flatMap(question -> JSONUtil.toList(question.getTags(), String.class).stream())
+                .distinct()
+                .toList();
     }
 
+    @Override
+    public void incrQuestionSubmitCount(Long questionId) {
+        baseMapper.incrSubmitCount(questionId);
+    }
 
+    @Override
+    public void incrQuestionAcceptedCount(Long questionId) {
+        baseMapper.incrAcceptedCount(questionId);
+    }
 }
